# matrical

./: flutter_bootstrap.js  flutter_service_worker.js  index.html
data_entry/: .gitignore  firebase_run.bat  pyproject.toml  sql_run.bat
data_entry/input_files/: departments.txt  departments_map.txt  useful_urls.txt
data_entry/parsers/: requisite_parser.py  requisite_types.py  schedule_parser.py
data_entry/scrapers/: curriculum_scraper.py  professors_scraper.py  scrape_to_firebase.py  scrape_to_sql.py  scraper.py  scraper_utils.py
data_entry/src/: app.py  checker.py  constants.py  database.py  reorganize_departments.py  requisite_handler.py  test_course.py
data_entry/src/models/: course.py  course_requisite_result.py  course_service.py  enums.py  requisite_types.py  stats.py  student.py
data_entry/src/parsers/: ansi_parser.py  requisite_parser.py  schedule_parser.py
data_entry/src/scrapers/: auto_scrape_to_firebase.py  curriculum_scraper.py  grade_scraper.py  log_utils.py  professors_scraper.py  scrape_to_firebase.py  scrape_to_sql.py  scraper.py  scraper_utils.py  ssh_scraper.py  (+2 more)
scraper/: .gitignore  constants.py  curriculum_output.txt  curriculum_scraper.py  database.py  departments2.txt  departments_map2.txt  dept_stats.csv  firebase_run.bat  grade_scraper.py  locustfile.py  main.py  notification.py  professor_ids.txt  professors_scraper.py  pyproject.toml  run.bat  scrape_to_firebase.py  scrape_to_sql.py  scraper.py  scraper_utils.py  sql_run.bat  ssh_scraper.py
scraper/input_files/: Notas-2023-2024.xlsx
scraper/parsers/: requisite_parser.py
(+123 files in other folders)
